# SoundTouch4Android

./: .gitignore  README.md  local.properties
apk/: soundtouch-demo.apk  soundtouch-unsigned.apk
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/maodq/ndkdemo/: ExampleInstrumentedTest.java
app/src/androidTest/java/com/maodq/soundtouch/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: soundtouch-jni.cpp
app/src/main/cpp/touch/: STTypes.h
app/src/main/java/com/maodq/ndkdemo/: MainActivity.java  SoundTouch.java
app/src/main/java/com/maodq/soundtouch/: MainActivity.java  SoundTouch.java  Util.java
app/src/main/java/net/surina/: ExampleActivity.java
app/src/main/java/net/surina/soundtouch/: SoundTouch.java
app/src/main/res/layout/: activity_example.xml  activity_main.xml
app/src/main/res/xml/: file_paths.xml
app/src/test/java/com/maodq/ndkdemo/: ExampleUnitTest.java
app/src/test/java/com/maodq/soundtouch/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
